# tsp_ytdlp

./: CLAUDE.md  Cargo.toml  bash_cmds.md  failed.md  install.sh  issues.md  notes.md  send_notification.md  todo.md
.claude/: settings.local.json
src/: client.rs  common.rs  daemon.rs  main.rs  task.rs  tests.rs
