[package]
name = "tsp_ytdlp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
filetime = "0.2"
tokio-listener = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
serde_json = "1.0"
directories = "6.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
atty = "0.2"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
